# nwf

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Procfile  pyproject.toml  railway.json
backend/api/: activity_mail.py  deps.py  friends.py  main.py  reactions.py  schemas.py
backend/api/routers/: admin.py  attachments.py  comments.py  connections.py  conversations.py  email_prefs.py  events.py  feed.py  health.py  invitations.py  me.py  notifications.py  posts.py  profiles.py  sources.py  stories.py  today.py
backend/core/: __init__.py  attribution.py  auth.py  classify.py  config.py  db.py  email.py  embeddings.py  enrich.py  logging.py  mentions.py  models.py  notifications.py  reactions.py  supabase_admin.py
backend/digest/: __init__.py  builder.py  copy.py  main.py
backend/scraper/: __init__.py  cluster.py  ingest.py  main.py
backend/scripts/: apply_migrations.py  apply_reactions_migration.py  backfill_embeddings.py  import_sources.py  recluster_events.py  reenrich_stories.py  seed_demo_friends.py  seed_fake_activity.py  seed_source_metadata.py  seed_top_comments.py  send_test_digest.py
backend/tests/: test_activity_emails.py  test_app.py  test_auth.py  test_classify.py  test_digest.py  test_feed.py  test_ingest.py  test_invitations_and_friends.py
data/: sources.json
design/: unified_feed.md
supabase/: config.toml  seed.sql
supabase/migrations/: 00000000000001_initial_schema.sql  (+21 more)
web/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: error.tsx  (+5 more)
(+64 files in other folders)
